--- a/app/src/main/res/layout/activity_zu_fang_xq.xml
+++ b/app/src/main/res/layout/activity_zu_fang_xq.xml
@@ -53,6 +53,7 @@
                     android:src="@mipmap/ic_share" />
 
                 <TextView
+                    android:id="@+id/tv_num"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -116,6 +117,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/tv_commission"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@id/name_type"
@@ -163,6 +165,7 @@
                             android:textSize="@dimen/sp_12" />
 
                         <TextView
+                            android:id="@+id/tv_houseType"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -195,6 +198,7 @@
                             android:textSize="@dimen/sp_12" />
 
                         <TextView
+                            android:id="@+id/tv_area"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -227,6 +231,7 @@
                             android:textSize="@dimen/sp_12" />
 
                         <TextView
+                            android:id="@+id/tv_orientation"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
@@ -262,20 +267,24 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_lables1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:background="@drawable/circle_solid_2186f7_2_tm15"
                         android:paddingHorizontal="5dp"
                         android:paddingVertical="2dp"
+                        android:visibility="invisible"
                         android:text="押一付三"
                         android:textColor="@color/color_333333"
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_lables2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
+                        android:visibility="invisible"
                         android:background="@drawable/circle_solid_2186f7_2_tm15"
                         android:paddingHorizontal="5dp"
                         android:paddingVertical="2dp"
@@ -284,9 +293,11 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/tv_lables3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
+                        android:visibility="invisible"
                         android:background="@drawable/circle_solid_2186f7_2_tm15"
                         android:paddingHorizontal="5dp"
                         android:paddingVertical="2dp"
@@ -310,6 +321,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -325,6 +337,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -347,6 +360,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -362,6 +376,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_4"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -384,6 +399,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_5"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -399,6 +415,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_6"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -421,6 +438,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv_fyxx_7"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -457,6 +475,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/tv_details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_10"
