--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
             android:gravity="start|center"
             android:hint="请输入手机号"
             android:textCursorDrawable="@drawable/common_edit_input_line"
-            android:text=""
+            android:text="17774004352"
             android:inputType="number"
             android:textColor="@color/color_000000"
             android:textColorHint="@color/color_999999"
@@ -120,7 +120,7 @@
             android:background="@null"
             android:gravity="start|center"
             android:hint="请输入密码"
-            android:text=""
+            android:text="111111"
             android:textCursorDrawable="@drawable/common_edit_input_line"
             android:inputType="textPassword"
             android:textColor="@color/color_000000"
