--- a/app/src/main/res/layout/item_zu_fang_db.xml
+++ b/app/src/main/res/layout/item_zu_fang_db.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/white"
+
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
-        android:text="@string/app_name"
+        android:layout_width="80dp"
+        android:background="@drawable/circle_line_eee_1"
+        android:layout_height="45dp"
         android:gravity="center"
+        android:text="@string/app_name"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_14" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
