--- a/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
+++ b/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
@@ -29,6 +29,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -53,6 +54,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -62,6 +64,7 @@
                 android:textSize="14sp" />
 
             <TextView
+                android:id="@+id/tv_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -86,6 +89,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_bz"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
@@ -110,6 +114,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/tv_dkrxm"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="15dp"
