--- a/app/src/main/res/layout/item_user_info.xml
+++ b/app/src/main/res/layout/item_user_info.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="0.8dp"
+    android:background="@color/white"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="@dimen/dp_10">
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:src="@mipmap/ic_launcher" />
