--- a/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
+++ b/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
@@ -105,11 +105,13 @@
                 android:background="@color/color_eeeeee" />
 
             <TextView
+                android:id="@+id/tv_yyr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="20dp"
                 android:text="带看人员"
+                android:visibility="invisible"
                 android:textColor="@color/color_666666"
                 android:textSize="12sp" />
 
@@ -120,6 +122,7 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
+                android:visibility="invisible"
                 android:text="姓名：李四"
                 android:textColor="@color/color_333333"
                 android:textSize="14sp" />
