--- a/app/src/main/res/layout/item_user_info.xml
+++ b/app/src/main/res/layout/item_user_info.xml
@@ -69,7 +69,8 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/iv_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/group_389" />
+        android:src="@drawable/common_selected_circle" />
 </LinearLayout>
