--- a/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
+++ b/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
@@ -17,7 +17,115 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <include layout="@layout/item_include_fyxx"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingHorizontal="15dp"
+                android:paddingTop="15dp">
+
+                <ImageView
+                    android:id="@+id/iv_status_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/group_927" />
+
+                <View
+                    android:id="@+id/view1"
+                    android:layout_width="0dp"
+                    android:layout_height="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/common_dotted_line" />
+
+                <ImageView
+                    android:id="@+id/iv_status_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/group_930" />
+
+                <View
+                    android:id="@+id/view2"
+                    android:layout_width="0dp"
+                    android:layout_height="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/common_dotted_line" />
+
+                <ImageView
+                    android:id="@+id/iv_status_3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/group_930" />
+
+                <View
+                    android:id="@+id/view3"
+                    android:layout_width="0dp"
+                    android:layout_height="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/common_dotted_line" />
+
+                <ImageView
+                    android:id="@+id/iv_status_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/group_930" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingHorizontal="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="预约"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="认证"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="看房"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="签约"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12" />
+
+            </LinearLayout>
+
+            <include layout="@layout/item_include_fyxx" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -32,8 +140,8 @@
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="15dp"
                 android:text="2021.02.02 11:11:00"
                 android:textColor="@color/color_333333"
                 android:textSize="14sp" />
@@ -111,9 +219,9 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="20dp"
                 android:text="带看人员"
-                android:visibility="invisible"
                 android:textColor="@color/color_666666"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_dkrxm"
@@ -122,10 +230,10 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:visibility="invisible"
                 android:text="姓名：李四"
                 android:textColor="@color/color_333333"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="invisible" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,27 +242,39 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/bnt_lxyx"
+                    android:id="@+id/bnt_1"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/bnt_details_height"
                     android:layout_marginLeft="20dp"
                     android:layout_weight="1"
                     android:background="@drawable/circle_line_theme_25"
                     android:gravity="center"
-                    android:text="联系一下"
+                    android:text="取消预约"
                     android:textColor="@color/color_blue_theme"
                     android:textSize="@dimen/bnt_details_text_size" />
 
                 <TextView
-                    android:id="@+id/bnt_qrgw"
+                    android:id="@+id/bnt_2"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/bnt_details_height"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/circle_line_theme_25"
+                    android:gravity="center"
+                    android:text="更改预约"
+                    android:textColor="@color/color_blue_theme"
+                    android:textSize="@dimen/bnt_details_text_size" />
+
+                <TextView
+                    android:id="@+id/bnt_3"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/bnt_details_height"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:background="@drawable/circle_solid_theme_25"
                     android:gravity="center"
-                    android:text="确认顾问"
+                    android:text="电话联系"
                     android:textColor="@color/white"
                     android:textSize="@dimen/bnt_details_text_size" />
 
