--- a/app/src/main/res/layout/fragment_home_four.xml
+++ b/app/src/main/res/layout/fragment_home_four.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_bj_theme"
     android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -56,9 +57,9 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_user_name"
                     android:layout_marginTop="5dp"
+                    android:text="查看并编辑个人资料"
                     android:textColor="@color/color_999999"
-                    android:textSize="@dimen/sp_12"
-                    android:text="查看并编辑个人资料" />
+                    android:textSize="@dimen/sp_12" />
 
                 <ImageView
                     android:id="@+id/tv_user_img"
@@ -176,6 +177,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_notLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -189,321 +191,13 @@
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_14" />
 
-
-                <LinearLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:padding="10dp">
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1054" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="我的收藏"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_2"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1045" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="我的租客"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1053" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="实名认证"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_4"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1044" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="我的客户"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:padding="10dp">
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_5"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1047" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="我的接单"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_6"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1043" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="看房状态"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_7"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1052" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="房源上架"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_8"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1048" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="成为房东"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:padding="10dp">
-
-                    <LinearLayout
-                        android:id="@+id/ll_center_9"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/group_1051" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="成为顾问"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10"
-                        android:visibility="invisible">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@mipmap/ic_1" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="看房状态"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10"
-                        android:visibility="invisible">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@mipmap/ic_1" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="房源上架"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dp_10"
-                        android:visibility="invisible">
-
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@mipmap/ic_1" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dp_10"
-                            android:text="成为房东"
-                            android:textColor="@color/color_333333"
-                            android:textSize="@dimen/sp_14" />
-
-                    </LinearLayout>
-                </LinearLayout>
+                    android:padding="@dimen/dp_10"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="4" />
 
             </LinearLayout>
 
