--- a/app/src/main/res/layout/activity_mine_set_smrz2.xml
+++ b/app/src/main/res/layout/activity_mine_set_smrz2.xml
@@ -29,6 +29,7 @@
                 android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/iv_zm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -45,6 +46,7 @@
                 android:textSize="12sp" />
 
             <ImageView
+                android:id="@+id/iv_cm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -57,12 +59,14 @@
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 android:text="房产证件信息"
+                android:visibility="gone"
                 android:textColor="@color/color_666666"
                 android:textSize="12sp" />
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="50dp"
                 android:adjustViewBounds="true"
