--- a/app/src/main/res/layout/activity_mine_apply_gw.xml
+++ b/app/src/main/res/layout/activity_mine_apply_gw.xml
@@ -6,16 +6,89 @@
 
     <include layout="@layout/my_toolbar" />
 
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:textColor="@color/red40"
+        android:textSize="@dimen/sp_14"
+        android:text="请填写本人真实有效的信息"/>
+
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@null"
+        android:gravity="start|center"
+        android:hint="请输入姓名"
+        android:padding="15dp"
+        android:text=""
+        android:textColor="@color/color_000000"
+        android:textColorHint="@color/color_999999"
+        android:textCursorDrawable="@drawable/common_edit_input_line"
+        android:textSize="14sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:layout_marginHorizontal="@dimen/dp_10"
+        android:background="@color/color_eeeeee" />
+
+    <EditText
+        android:id="@+id/et_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@null"
+        android:gravity="start|center"
+        android:hint="请输入身份证号"
+        android:padding="15dp"
+        android:text=""
+        android:textColor="@color/color_000000"
+        android:textColorHint="@color/color_999999"
+        android:textCursorDrawable="@drawable/common_edit_input_line"
+        android:textSize="14sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:layout_marginHorizontal="@dimen/dp_10"
+        android:background="@color/color_eeeeee" />
+
+    <TextView
+        android:id="@+id/et_cxqy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:background="@null"
+        android:gravity="start|center"
+        android:hint="请输入身份证号"
+        android:inputType="number"
+        android:padding="15dp"
+        android:text=""
+        android:textColor="@color/color_000000"
+        android:textColorHint="@color/color_999999"
+        android:textCursorDrawable="@drawable/common_edit_input_line"
+        android:textSize="14sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.8dp"
+        android:layout_marginHorizontal="@dimen/dp_10"
+        android:background="@color/color_eeeeee" />
+
     <TextView
         android:id="@+id/bnt"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bnt_details_height"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="150dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/circle_solid_theme_25"
         android:gravity="center"
-        android:text="登录"
+        android:text="提交审核"
         android:textColor="@color/white"
         android:textSize="@dimen/bnt_details_text_size" />
 </LinearLayout>
