--- a/app/src/main/res/layout/activity_mine_apply_gw.xml
+++ b/app/src/main/res/layout/activity_mine_apply_gw.xml
@@ -64,7 +64,8 @@
         android:layout_marginTop="15dp"
         android:background="@null"
         android:gravity="start|center"
-        android:hint="请输入身份证号"
+        android:hint="请选择区域"
+        android:drawableEnd="@mipmap/ic_jiantou_you"
         android:inputType="number"
         android:padding="15dp"
         android:text=""
