--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -178,7 +178,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="260dp"
+                android:layout_height="wrap_content"
                 android:padding="10dp">
 
                 <RelativeLayout
@@ -190,9 +190,10 @@
                     <ImageView
                         android:id="@+id/iv_icon"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
                         android:scaleType="fitXY"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/mask_group0" />
 
                 </RelativeLayout>
 
@@ -210,9 +211,10 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:scaleType="fitXY"
-                            android:src="@mipmap/ic_launcher" />
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/mask_group1" />
 
                     </RelativeLayout>
 
@@ -224,9 +226,10 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:scaleType="fitXY"
-                            android:src="@mipmap/ic_launcher" />
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/mask_group2" />
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -236,13 +239,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_margin="15dp"
                 android:text="房源推荐"
                 android:textColor="@color/color_000000"
                 android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="wrap_content">
 
                 <RadioGroup
