--- a/app/src/main/res/layout/activity_pay_bank_card_list.xml
+++ b/app/src/main/res/layout/activity_pay_bank_card_list.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/my_toolbar" />
+        layout="@layout/include_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cardRv"
