--- a/app/src/main/res/layout/activity_zu_fang_yyxq.xml
+++ b/app/src/main/res/layout/activity_zu_fang_yyxq.xml
@@ -5,7 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <net.lucode.hackware.magicindicator.MagicIndicator
         android:id="@+id/magic_indicator"
