--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -3,5 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
