--- a/app/src/main/res/layout/activity_mine_ht_jc_ok.xml
+++ b/app/src/main/res/layout/activity_mine_ht_jc_ok.xml
@@ -6,7 +6,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <ImageView
         android:layout_width="88dp"
