--- a/app/src/main/res/layout/activity_mine_set_smrz.xml
+++ b/app/src/main/res/layout/activity_mine_set_smrz.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_bj_theme"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <TextView
         android:layout_width="wrap_content"
