--- a/app/src/main/res/layout/activity_mine_set_smrz2.xml
+++ b/app/src/main/res/layout/activity_mine_set_smrz2.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
