--- a/app/src/main/res/layout/activity_refresh_list.xml
+++ b/app/src/main/res/layout/activity_refresh_list.xml
@@ -7,7 +7,7 @@
     android:background="@color/color_bj_theme"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
