--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <TextView
         android:layout_width="wrap_content"
