--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
 
     <WebView
