--- a/app/src/main/res/layout/activity_zu_fang_fybd.xml
+++ b/app/src/main/res/layout/activity_zu_fang_fybd.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/my_toolbar" />
+    <include layout="@layout/include_toolbar" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
